--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ dist/
 .env.local
 .env.*.local
 
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
@@ -21,3 +22,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+.DS_Store
